syntax="proto3";
package serverstream;

service GreetingService{
    rpc Greet (GreetManyRequest) returns (stream GreetManyResponse);
}

message GreetManyRequest{
    Greeting greeting = 1;
}
message GreetManyResponse{
    string result=1;
}
message Greeting{
    string firstname=1;
    string lastname=2;
}